update icon names

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="site-root">
             <header class="site-header">
-                <div class="site-title">Games Catalog</div>
+                <div class="site-title">Catalog</div>
                 <div class="site-subtitle">mirraaps.space</div>
             </header>
             <main class="site-main">
