--- a/index.html
+++ b/index.html
@@ -47,26 +47,7 @@
                     <h2 class="section-title">Featured Games</h2>
                     <div class="featured-row" id="featured-row"></div>
                 </section>
-
-                <section class="section" id="section-new">
-                    <h2 class="section-title">New Games</h2>
-                    <div class="game-row game-row--category" data-category="new"></div>
-                </section>
-
-                <section class="section" id="section-casual">
-                    <h2 class="section-title">Casual</h2>
-                    <div class="game-row game-row--category" data-category="casual"></div>
-                </section>
-
-                <section class="section" id="section-arcade">
-                    <h2 class="section-title">Arcade</h2>
-                    <div class="game-row game-row--category" data-category="arcade"></div>
-                </section>
-
-                <section class="section" id="section-fps">
-                    <h2 class="section-title">FPS</h2>
-                    <div class="game-row game-row--category" data-category="fps"></div>
-                </section>
+                <div id="dynamic-sections"></div>
             </main>
 
             <section class="search-overlay" id="search-overlay">
@@ -86,9 +67,9 @@
             </section>
 
             <footer class="app-footer">
-                <a href="#" class="footer-link">About</a>
+                <a href="./about.html" class="footer-link">About</a>
                 <span class="footer-separator">|</span>
-                <a href="#" class="footer-link">Privacy Policy</a>
+                <a href="./privacy.html" class="footer-link">Privacy Policy</a>
             </footer>
         </div>
         <script src="./catalog.js"></script>
