--- a/game.html
+++ b/game.html
@@ -63,7 +63,14 @@
               <div class="game-frame-footer">
                 <h1 class="game-frame-title" id="game-title"></h1>
                 <div class="game-frame-actions">
-                  <button type="button" class="game-fullscreen-button" id="fullscreen-button" aria-label="Fullscreen"></button>
+                  <button type="button" class="game-fullscreen-button" id="fullscreen-button" aria-label="Fullscreen">
+                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9 5H5V9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M15 5H19V9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M5 15V19H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M19 15V19H15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </button>
                 </div>
               </div>
             </div>
