--- a/game.html
+++ b/game.html
@@ -108,6 +108,7 @@
                   class="game-frame"
                   title="Game player"
                   frameborder="0"
+                  allow="fullscreen"
                   allowfullscreen
                   webkitallowfullscreen
                   mozallowfullscreen
