PC iframe Play Now overlay

--- a/game.html
+++ b/game.html
@@ -103,6 +103,14 @@
           <section class="game-content">
             <div class="game-frame-section">
               <div class="game-frame-wrapper" id="game-frame-wrapper">
+                <div class="game-frame-overlay" id="game-frame-overlay" aria-hidden="true">
+                  <div class="game-frame-cover" id="game-frame-cover"></div>
+                  <div class="game-frame-overlay-content">
+                    <img class="game-frame-overlay-icon" id="game-frame-icon" alt="">
+                    <h2 class="game-frame-overlay-title" id="game-frame-overlay-title"></h2>
+                    <button type="button" class="game-frame-play-button" id="game-frame-play">Play Now</button>
+                  </div>
+                </div>
                 <iframe
                   id="game-frame"
                   class="game-frame"
